# locallearner

./: CLAUDE.md  README.md  pyproject.toml
data/: test_3nt_clean.pcfg  test_3nt_identity.pcfg  test_3nt_skewed.pcfg  test_3nt_subset.pcfg  test_4nt_overlap.pcfg
lib/: Makefile  expected-counts.c  expected-counts.h  hash-string.c  io.c
locallearner/: compare_joint_marginal.py  compare_joint_marginal_truncated.py  convert_mjio_to_pcfg.py  convert_mjtrees_to_trees.py  convert_pcfg_to_mjio.py  convert_trees_to_pcfg.py  convert_trees_to_yields.py  convert_wcfg_to_pcfg.py  count_nonterminals.py  count_terminals.py  diagnose_spurious.py  estimate_hyperparameters.py  evaluate_autodetect.py  evaluate_kernels.py  evaluate_neural_anchors.py  evaluate_pcfg.py  evaluation.py  experiment_terminal_scaling.py  gold_kernels.py  inspect_terminal.py  locallearner.py  neural_baseline.py  neural_features.py  neural_learner.py  neyessen.py  ngram_counts.py  nmf.py  plot_antichain.py  plot_sweep.py  relabel_pcfg.py  run_all_gold_pipelines.py  run_find_kernels.py  run_gold_pipeline.py  run_gold_sgd.py  run_local_io.py  run_make_wcfg.py  run_neural_baseline.py  run_neural_pipeline.py  run_positional_k_sweep.py  run_quick_learner.py  (+17 more)
scripts/: Makefile  Makefile.neural  README.md  config.json  eval_example.json  setup.sh
tests/: __init__.py  conftest.py  test_anchor_selection.py  test_clustering.py  test_integration.py  test_locallearner.py  test_neural_baseline.py  test_neural_learner.py  test_nmf.py  test_nmf_autodetect.py  test_smoothed_kld.py  test_utility.py  test_wcfg_algorithms.py  (+4 more)
(+7 files in other folders)
