[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "locallearner"
version = "1.0.0"
description = "Implementation of consistent unsupervised estimators for anchored PCFGs"
readme = "README.md"
requires-python = ">=3.8"
license = {text = "MIT"}
authors = [
    {name = "Alexander Clark"},
    {name = "Nathanael Fijalkow"},
]
keywords = ["pcfg", "grammar", "nlp", "unsupervised-learning"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "numpy>=1.18",
    "scipy>=1.5",
    "matplotlib>=3.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
]
neural = [
    "torch>=2.0",
]

[project.urls]
Repository = "https://github.com/alexc17/locallearner"

[tool.setuptools.packages.find]
where = ["."]
include = ["locallearner*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
addopts = "-v -m 'not slow'"
markers = [
    "slow: slow integration tests (run with pytest -m slow)",
]
